// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`basic > single command > can run a simple command 3 1`] = `
---------- Context -----------
Working Directory: /ROOT/test/__fixtures__/main
Command: /ROOT/nadle.mjs --max-workers 1 --no-footer --config nadle.basic.ts compile
---------- Stdout ------------
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] Using Nadle from /ROOT/lib/index.js
[log] Loaded configuration from /ROOT/test/__fixtures__/main/nadle.basic.ts

[log] <Yellow>></Yellow> Task <Bold>node</BoldDim> <Yellow>STARTED</Yellow>

[log]
<Green>✓</Green> Task <Bold>node</BoldDim> <Green>DONE</Green> <Dim>{duration}</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>install</BoldDim> <Yellow>STARTED</Yellow>

[log]
<Green>✓</Green> Task <Bold>install</BoldDim> <Green>DONE</Green> <Dim>{duration}</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>compileSvg</BoldDim> <Yellow>STARTED</Yellow>

[log]
<Green>✓</Green> Task <Bold>compileSvg</BoldDim> <Green>DONE</Green> <Dim>{duration}</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>compileTs</BoldDim> <Yellow>STARTED</Yellow>

[log]
<Green>✓</Green> Task <Bold>compileTs</BoldDim> <Green>DONE</Green> <Dim>{duration}</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>compile</BoldDim> <Yellow>STARTED</Yellow>

[log]
<Green>✓</Green> Task <Bold>compile</BoldDim> <Green>DONE</Green> <Dim>{duration}</BoldDim>
[log]
<Bold><Green>RUN SUCCESSFUL</Green></BoldDim> in <Bold>{duration}</BoldDim>
[log] <Bold>5</BoldDim> tasks executed
`;

exports[`basic > single command > can run a simple command 4 1`] = `
---------- Context -----------
Working Directory: /ROOT/test/__fixtures__/main
Command: /ROOT/nadle.mjs --max-workers 1 --no-footer --config nadle.basic.ts test
---------- Stdout ------------
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] Using Nadle from /ROOT/lib/index.js
[log] Loaded configuration from /ROOT/test/__fixtures__/main/nadle.basic.ts

[log] <Yellow>></Yellow> Task <Bold>node</BoldDim> <Yellow>STARTED</Yellow>

[log]
<Green>✓</Green> Task <Bold>node</BoldDim> <Green>DONE</Green> <Dim>{duration}</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>install</BoldDim> <Yellow>STARTED</Yellow>

[log]
<Green>✓</Green> Task <Bold>install</BoldDim> <Green>DONE</Green> <Dim>{duration}</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>test</BoldDim> <Yellow>STARTED</Yellow>

[log]
<Green>✓</Green> Task <Bold>test</BoldDim> <Green>DONE</Green> <Dim>{duration}</BoldDim>
[log]
<Bold><Green>RUN SUCCESSFUL</Green></BoldDim> in <Bold>{duration}</BoldDim>
[log] <Bold>3</BoldDim> tasks executed
`;

exports[`basic > with --dry-run > should list tasks in order 1 1`] = `
---------- Context -----------
Working Directory: /ROOT/test/__fixtures__/main
Command: /ROOT/nadle.mjs --max-workers 1 --no-footer --config nadle.abc.ts task-A task-B --dry-run
---------- Stdout ------------
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] Using Nadle from /ROOT/lib/index.js
[log] Loaded configuration from /ROOT/test/__fixtures__/main/nadle.abc.ts

[log] <Bold>Execution plan:</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-A.0</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-A.1</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-A.2</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-A</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-B.0</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-B.1</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-B.2</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-B</BoldDim>
[log]
<Bold><Green>RUN SUCCESSFUL</Green></BoldDim> in <Bold>{duration}</BoldDim>
[log] <Bold>0</BoldDim> task executed
`;

exports[`basic > with --dry-run > should list tasks in order 2 1`] = `
---------- Context -----------
Working Directory: /ROOT/test/__fixtures__/main
Command: /ROOT/nadle.mjs --max-workers 1 --no-footer --config nadle.abc.ts task-B task-A --dry-run
---------- Stdout ------------
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] Using Nadle from /ROOT/lib/index.js
[log] Loaded configuration from /ROOT/test/__fixtures__/main/nadle.abc.ts

[log] <Bold>Execution plan:</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-B.0</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-B.1</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-B.2</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-B</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-A.0</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-A.1</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-A.2</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-A</BoldDim>
[log]
<Bold><Green>RUN SUCCESSFUL</Green></BoldDim> in <Bold>{duration}</BoldDim>
[log] <Bold>0</BoldDim> task executed
`;

exports[`basic > with --dry-run > should list tasks in order 3 1`] = `
---------- Context -----------
Working Directory: /ROOT/test/__fixtures__/main
Command: /ROOT/nadle.mjs --max-workers 1 --no-footer --config nadle.abc.ts task-B task-A.2 task-A --dry-run
---------- Stdout ------------
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] Using Nadle from /ROOT/lib/index.js
[log] Loaded configuration from /ROOT/test/__fixtures__/main/nadle.abc.ts

[log] <Bold>Execution plan:</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-B.0</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-B.1</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-B.2</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-B</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-A.2</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-A.0</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-A.1</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-A</BoldDim>
[log]
<Bold><Green>RUN SUCCESSFUL</Green></BoldDim> in <Bold>{duration}</BoldDim>
[log] <Bold>0</BoldDim> task executed
`;

exports[`basic > with --dry-run > should list tasks in order 4 1`] = `
---------- Context -----------
Working Directory: /ROOT/test/__fixtures__/main
Command: /ROOT/nadle.mjs --max-workers 1 --no-footer --config nadle.abc.ts task-A.1 task-A.0 task-A.2 task-A --dry-run
---------- Stdout ------------
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] Using Nadle from /ROOT/lib/index.js
[log] Loaded configuration from /ROOT/test/__fixtures__/main/nadle.abc.ts

[log] <Bold>Execution plan:</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-A.1</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-A.0</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-A.2</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-A</BoldDim>
[log]
<Bold><Green>RUN SUCCESSFUL</Green></BoldDim> in <Bold>{duration}</BoldDim>
[log] <Bold>0</BoldDim> task executed
`;

exports[`basic > with --dry-run > should list tasks in order 5 1`] = `
---------- Context -----------
Working Directory: /ROOT/test/__fixtures__/main
Command: /ROOT/nadle.mjs --max-workers 1 --no-footer --config nadle.abc.ts task-C task-A --dry-run
---------- Stdout ------------
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] Using Nadle from /ROOT/lib/index.js
[log] Loaded configuration from /ROOT/test/__fixtures__/main/nadle.abc.ts

[log] <Bold>Execution plan:</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-A.0</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-A.1</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-A.2</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-B.0</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-B.1</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-B.2</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-C.0</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-C.1</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-C.2</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-A</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-B</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-C</BoldDim>
[log]
<Bold><Green>RUN SUCCESSFUL</Green></BoldDim> in <Bold>{duration}</BoldDim>
[log] <Bold>0</BoldDim> task executed
`;

exports[`basic > with --dry-run > should list tasks in order 6 1`] = `
---------- Context -----------
Working Directory: /ROOT/test/__fixtures__/main
Command: /ROOT/nadle.mjs --max-workers 1 --no-footer --config nadle.abc.ts task-B task-C --dry-run
---------- Stdout ------------
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] Using Nadle from /ROOT/lib/index.js
[log] Loaded configuration from /ROOT/test/__fixtures__/main/nadle.abc.ts

[log] <Bold>Execution plan:</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-B.0</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-B.1</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-B.2</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-B</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-A.0</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-A.1</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-A.2</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-C.0</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-C.1</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-C.2</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-A</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-C</BoldDim>
[log]
<Bold><Green>RUN SUCCESSFUL</Green></BoldDim> in <Bold>{duration}</BoldDim>
[log] <Bold>0</BoldDim> task executed
`;

exports[`basic > with --dry-run > should list tasks in order 7 1`] = `
---------- Context -----------
Working Directory: /ROOT/test/__fixtures__/main
Command: /ROOT/nadle.mjs --max-workers 1 --no-footer --config nadle.abc.ts task-A.1 task-B task-C --dry-run
---------- Stdout ------------
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] Using Nadle from /ROOT/lib/index.js
[log] Loaded configuration from /ROOT/test/__fixtures__/main/nadle.abc.ts

[log] <Bold>Execution plan:</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-A.1</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-B.0</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-B.1</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-B.2</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-B</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-A.0</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-A.2</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-C.0</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-C.1</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-C.2</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-A</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-C</BoldDim>
[log]
<Bold><Green>RUN SUCCESSFUL</Green></BoldDim> in <Bold>{duration}</BoldDim>
[log] <Bold>0</BoldDim> task executed
`;

exports[`basic > with --dry-run > should list tasks in order 8 1`] = `
---------- Context -----------
Working Directory: /ROOT/test/__fixtures__/main
Command: /ROOT/nadle.mjs --max-workers 1 --no-footer --config nadle.abc.ts task-B.2 task-A.1 task-B task-C --dry-run
---------- Stdout ------------
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] Using Nadle from /ROOT/lib/index.js
[log] Loaded configuration from /ROOT/test/__fixtures__/main/nadle.abc.ts

[log] <Bold>Execution plan:</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-B.2</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-A.1</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-B.0</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-B.1</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-B</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-A.0</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-A.2</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-C.0</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-C.1</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-C.2</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-A</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>task-C</BoldDim>
[log]
<Bold><Green>RUN SUCCESSFUL</Green></BoldDim> in <Bold>{duration}</BoldDim>
[log] <Bold>0</BoldDim> task executed
`;
